my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EBITO/EBITO.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBITO.dml:9:1: error EBITO: illegal bitorder: 'be32'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBITO.dml:12:15: error EBITO: illegal bitorder: 'strange'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBITO.dml:15:15: error EBITO: illegal bitorder: 'le32'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBITO.dml:18:15: error EBITO: illegal bitorder: 'be32'
